# bibliotheque

./: .gitignore  CMakeLists.txt  README.md  justfile  library.xml  main.cpp
.github/workflows/: main.yml
doc/: requirements.md
lib/: book.cpp  book.h  library.cpp  library.h  utils.cpp  utils.h
src/: book.cpp  book.h  utils.hpp
